--- a/style.css
+++ b/style.css
@@ -175,3 +175,74 @@ html,body{
 .latest-container p{
       font-weight: 600;
 }
+
+.card-container{
+      /* border:10px solid black; */
+      padding: 20px 0;
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      justify-content: center;
+      gap: 30px;
+}
+
+.card{
+      /* border: 1px solid black; */
+      min-height: 385px;
+      max-width: 400px;
+      cursor: pointer;
+}
+
+.card > figure{
+      width: 100%;
+      height: 223px;
+      overflow: hidden;
+      border: 5px solid black;
+      position: relative;
+}
+
+.card img{
+      width: 100%;
+      height: 100%;
+      border: 2px solid red;
+      transition: 0.2sec;
+}
+
+.card:hover img{
+      transform:scale(1.1);
+
+}
+
+.card .category{
+      color: #2a2a2a;
+      padding-top: 15px;
+      font-size: 14px;
+}
+
+.card .category>span{
+      color: #ff4655;
+}
+
+.card .title{
+      font-size: 28px;
+      padding: 10px 0;
+      font-weight: bolder;
+}
+
+.card .description{
+      font-weight: normal;
+      font-size: 16px;
+}
+
+.card .sharelink{
+      height: 60px;
+      width: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      z-index: 100;
+      bottom: 0;
+      right: 0;
+      background-color: #0f192395;
+      border: 0.5 solid #2b2a29;
+}
